profile component worked upon

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<div>
+<div class="panel panel-default">
+ <div class="panel-heading">
+  {{profile.name}}<smal>{{profile.login}}</smal>
+  {{profile.company}}
+ </div>
+</div>
+</div>
