login profile wput in brackets

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div>
 <div class="panel panel-default">
  <div class="panel-heading">
-  {{profile.name}}<smal>{{profile.login}}</smal>
+  {{profile.name}}<smal>({{profile.login}})</smal>
   {{profile.company}}
  </div>
 </div>
