more html added at profile component

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,5 +4,19 @@
   {{profile.name}}<smal>({{profile.login}})</smal>
   {{profile.company}}
  </div>
+ <div class="panel-body">
+  <div class="row">
+   <div class="col-sm-3">
+    <img src="" alt="image profile" srcset="" class="img-circle img-responsive">
+   </div>
+   <div class="col-sm-5">
+    <div class="list-group">
+     <ul class="list-group">
+      
+     </ul>
+    </div>
+   </div>
+  </div>
+ </div>
 </div>
 </div>
