comment added @profile.html component

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,6 +4,7 @@
   {{profile.name}}<smal>({{profile.login}})</smal>
   {{profile.company}}
  </div>
+ <!-- to be displayed on the profile page ,more about the profile -->
  <div class="panel-body">
   <div class="row">
    <div class="col-sm-3">
@@ -12,7 +13,7 @@
    <div class="col-sm-5">
     <div class="list-group">
      <ul class="list-group">
-      
+
      </ul>
     </div>
    </div>
