more .html added @profile.html

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -13,7 +13,9 @@
    <div class="col-sm-5">
     <div class="list-group">
      <ul class="list-group">
-
+     <li class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
+      <li class="list-group-item" *ngIf="profile.bio">free to freelance{{profile.bio}}</li>
+      
      </ul>
     </div>
    </div>
