following section added in @profile.html

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -15,8 +15,17 @@
      <ul class="list-group">
      <li class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
       <li class="list-group-item" *ngIf="profile.bio">free to freelance{{profile.bio}}</li>
-      
+
      </ul>
+     <div class="col-sm-5">
+      <div>
+       <p>
+        <span class="label label-default">{{profile.followers}}followers</span>
+         <span class="label label-default">{{profile.followers}}followers</span>
+          <span class="label label-default">{{profile.followers}}followers</span>
+       </p>
+      </div>
+     </div>
     </div>
    </div>
   </div>
