comment added in @followrs section

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -17,6 +17,7 @@
       <li class="list-group-item" *ngIf="profile.bio">free to freelance{{profile.bio}}</li>
 
      </ul>
+     <!-- following section,followers section -->
      <div class="col-sm-5">
       <div>
        <p>
