--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -22,8 +22,9 @@
       <div>
        <p>
         <span class="label label-default">{{profile.followers}}followers</span>
-         <span class="label label-default">{{profile.followers}}followers</span>
-          <span class="label label-default">{{profile.followers}}followers</span>
+         <span class="label label-primary">{{profile.followers}}followers</span>
+          <span class="label label-success">{{profile.followers}}followers</span>
+           <span class="label label-info">{{profile.followers}}followers</span>
        </p>
       </div>
      </div>
