--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div>
 <div class="panel panel-default">
  <div class="panel-heading">
-  {{profile.name}}<smal>({{profile.login}})</smal>
+  {{profile.name}}<small>({{profile.login}})</small>
   {{profile.company}}
  </div>
  <!-- to be displayed on the profile page ,more about the profile -->
