more working on the api

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,5 @@
 <div>
+ <input type="text">search here 
 <div class="panel panel-default">
  <div class="panel-heading">
   {{profile.name}}<small>({{profile.login}})</small>
