repository to be shown worked on

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -29,6 +29,18 @@
         
        </p>
        <p><a href ="{{profile.html_url}}" target="_blank" class="btn btn-success btn-sm">Github profile here</a></p>
+       <!-- workings on the repository -->
+       <div class="panel panel-default">
+           <div class="panel-heading">
+               <h4 class="panel-title">
+                   Repository
+               </h4>
+           </div>
+           <!-- where the repository will be displayed -->
+           <div class="panel-body" *ngFor="let repo of repos">
+
+           </div>
+       </div>
       </div>
      </div>
     </div>
