--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,10 @@
+<form action="">
+    <div class="form-group">
+        <input type="text" class="form-control">
+    </div>
+</form>
+
+
 <div *ngIf="profile">
     <input type="text"><button>search</button>
 <div class="panel panel-default">
