more on input checkbox

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,7 +5,7 @@
 A single page application for searching github users and repositories. The site uses the Github API to perform searches on Github, and display the results to the users</p>
 <form action="" class="search-form">
     <div class="form-group">
-        <input type="text" class="form-control" [(ngModel)]="username" name="username" (keyup)="findProfile()" placeholder="search here using your UserName:">
+        <input type="text" class="form-control" [(ngModel)]="username" name="username" (keyup)="findProfile()" placeholder="search here using your UserName:Then press Enter key">
     </div>
 </form>
 
